Feat: 添加post文章图片

--- a/_posts/2018-04-03-浅谈ES6.md
+++ b/_posts/2018-04-03-浅谈ES6.md
@@ -8,6 +8,8 @@ tag: H5
 ES6出现了有一段时间，有点属于老生常谈了，毕竟ES7的提案都在成为标准，今天好好谈谈ES6给学习、工作带来的便利！
 ============================================================================================
 
+![](/images/posts/h5/es6.jpg)
+
 ## 模板字符串(Template Literals)
 ---
 模板字符串的出现，比以前的字符串拼接来的简单直接。可以用`${name}`插入变量。具体表现如下：
