--- a/_posts/2019-05-25-js进阶.md
+++ b/_posts/2019-05-25-js进阶.md
@@ -299,5 +299,26 @@ var myPromise = new Promise2(function(resolve, reject) {
 // 运行过程
 ![](/images/posts/javascript/promise.png)
 
+## 深拷贝
+shallow clone 与 deep clone
+前者是把一个对象的每个值赋值到一个新对象，新对象与源对象是共用一个内存地址，故改变新对象的下的值，源对象的对应的值也会发生改变。
+后者是通过递归解决clone问题，这种方式让新对象与源对象摆脱依赖，缺点是拷贝的速度更慢，代价更大。
+```
+function deepClone(source) {
+    if (!source) {
+        return source;
+    }
+    let target = {};
+    for (const key in source) {
+        if (typeof source[key] === 'object') {
+            target[key] = copy(source[key]);
+        } else {
+            target[key] = source[key];
+        }
+    }
+    return target;
+}
+```
+
 ### 总结
 任何事物，透过现象看本质，做到知其然更知所以然，放到javascript中也是一样的。原理性的东西虽然不会让你代码看上去简洁，但是反过来想想，如果你是设计api的人，只提供一个接口文档，别人直接调用，简单方便，但是这个过程你已经帮别人做了大部分的事，总结来说，原理性的东西对于一个人提高代码组织、架构设计能力是一个必备过程。目前自己对这方面也是有很大的欠缺，所以勤能补拙、查漏补缺，尽量提高自己在这方面的能力。谨记：万丈高楼平地起，坚实的地基才是重中之重，大厦华丽的外表只不过是点缀罢了。
