feat: 需改js进阶文章

--- a/_posts/2019-05-25-js进阶.md
+++ b/_posts/2019-05-25-js进阶.md
@@ -62,7 +62,11 @@ Function.prototype.apply2 = function() {
     delete context.fn;
 }
 
-test.apply2({}, 1, 2);
+const test = function(a, b) {
+    console.log(a, b);
+}
+
+test.apply2({}, [1, 2]);
 // 1, 2
 ```
 
@@ -76,8 +80,11 @@ Function.prototype.apply2 = function() {
     context.fn(param.join(','));
     delete context.fn;
 }
+const test = function(a, b) {
+    console.log(a, b);
+}
 
-test.apply2({}, 1, 2);
+test.apply2({}, [1, 2]);
 // 1, 2
 ```
 
@@ -311,7 +318,7 @@ function deepClone(source) {
     let target = {};
     for (const key in source) {
         if (typeof source[key] === 'object') {
-            target[key] = copy(source[key]);
+            target[key] = deepClone(source[key]);
         } else {
             target[key] = source[key];
         }
