feat: update react cli post

--- a/_posts/2019-09-09-react cli 制作.md
+++ b/_posts/2019-09-09-react cli 制作.md
@@ -11,7 +11,9 @@ tag: cli
 
 ---
 
-**为什么会有造`react cli`的想法？**
+[TOC]
+
+## 一 为什么会有造 react cli 的想法？
 
 
 受困于每次新开项目，不论项目大小，都得重新搭建，无疑是劳民伤财、效率低下的苦差事。
@@ -20,7 +22,7 @@ tag: cli
 
 ***
 
-**要解决的问题？**
+## 二 要解决的问题？
 
 *  支持react
 *  支持react、react-router
@@ -31,7 +33,7 @@ tag: cli
 
 ***
 
-**最终要完成的形态？**
+## 三 最终要完成的形态？
 
 1. 所有开发、测试、生产打包的指令集中封装在一个全局变量里面，类似于`react-scripts`，执行`react-scripts start`，就可以启动项目进行开发；执行`react-scripts test`，就可以进行代码测试等等；
 
@@ -41,17 +43,18 @@ tag: cli
 
 *** 
 
-**如何开始？**
+## 四 如何开始？
 
 先放个大招，show出整个项目的目录结构，猜猜各自的功能是什么？😁
 <img src="/images/posts/cli/catalogue.png" style="width: 300px; text-align: left; margin: 0;" />
 
 
-1. **准备好模板文件**
+### 1. 准备好模板文件
 
-   目前提供了两套模板，一套是纯 `react`（不包括`router`、`redux`、`ts`），一套是整合了 `react` 全家桶 + `ts`（即是 `react`+`react`-`router`+`react-redux`+`typescript`）,主要放置在 `template` 目录中，前者是 `default` 项目，后者是 `typescript` 项目。
+   目前提供了两套模板，一套是纯 `react`（不包括`router`、`redux`、`typescript`），一套是整合了 `react` 全家桶 + `typescript`（即是 `react`+`react-router`+`react-redux`+`typescript`）,主要放置在 `template` 目录中，前者是 `default` 项目，后者是 `typescript` 项目。
+<br>
 
-2. **完成cli脚本**
+### 2. 完成cli脚本
     在完成 `cli` 脚本前，需要知道什么是 `cli` ？
     Wikipedia给出的解释是这样滴
     > 命令行界面（英语：Command-Line Interface，缩写：CLI）是在图形用户界面得到普及之前使用最为广泛的用户界面，它通常不支持鼠标，用户通过键盘输入指令，计算机接收到指令后，予以执行。也有人称之为字符用户界面（character user interface, CUI）。
@@ -59,6 +62,7 @@ tag: cli
     说人话就是对着那个黑黑的窗口（终端）敲命令，然后输出你想要的东西，仅此而已。
     
     早期的计算机也就如此，只不过为了普通人都能轻松使用它，便有了GUI，做的最好的莫过于现在的windows，哈哈，扯远了。。。
+    <br>
     
     
    <u>好戏开场了</u>
@@ -73,18 +77,18 @@ tag: cli
        ```
        
    - 如何做到按提示安装想要的模板？
-        首先解释下，`package.json`将会安装以下的依赖
-        "chalk" - 控制台字符样式
-        "commander" - 接收命令参数输入
-        "conf" - 持久化插件
-        "cp-file" - 拷贝文件
-        "execa" - 调用shell和本地外部程序的javascript封装 启动子进程
-        "globby" - 匹配文件目录
-        "handlebars" - 模板解析
-        "inquirer" - 提示输入
-        "make-dir" - 文件夹创建
-        "ora" - 命令行loading
-        "p-each-series" - 迭代器
+        首先解释下，`package.json`将会安装以下的依赖<br>
+        "chalk" - 控制台字符样式<br>
+        "commander" - 接收命令参数输入<br>
+        "conf" - 持久化插件<br>
+        "cp-file" - 拷贝文件<br>
+        "execa" - 调用shell和本地外部程序的javascript封装 启动子进程<br>
+        "globby" - 匹配文件目录<br>
+        "handlebars" - 模板解析<br>
+        "inquirer" - 提示输入<br>
+        "make-dir" - 文件夹创建<br>
+        "ora" - 命令行loading<br>
+        "p-each-series" - 迭代器<br>
         
         ***
         在`package.json`设置的`bin`选项指定到`index.js`,
@@ -98,20 +102,20 @@ tag: cli
         ```
         
         ***
-        lib.js 文件主要做的事情有：
+        cli.js 文件主要做的事情有：
 
         * [ ] 接收命令行参数
         * [ ] 处理命令行参数
         * [ ] 处理提示参数
         * [ ] 创建目标文件夹及其文件
 
-     
         其中第三点主要通过 [prompt-params.js](https://github.com/NikFranki/start-react-project/blob/master/lib/default-params.js) 去做
         第四点交由 [create-project.js](https://github.com/NikFranki/start-react-project/blob/master/lib/create-project.js) 去做
         
+        <br>
     - npm link (发布后用npm i -g start-react-project)
 
-        做完以上部分，可以在当前目录，执行 `npm link`, npm link 作用
+        做完以上部分，可以在当前目录，执行 `npm link`, npm link 作用:
 
         > 在本地开发 npm 模块的时候，我们可以使用 npm link 命令，将 npm 模块链接到对应的运行项目中去，方便地对模块进行调试和测试
         
@@ -125,10 +129,11 @@ tag: cli
       cd && yarn start
       ```
       就可以看到项目运行起来了
+      <br>
        
     
 
-3. cli项目发布到npm
+### 3. cli项目发布到npm
 
     在 `package.json` 设置
     ```
@@ -144,6 +149,6 @@ tag: cli
     [npm 包制作发布](http://franki.sevenyuan.cn/2018/10/npm%E5%8C%85%E5%88%B6%E4%BD%9C%E5%8F%91%E5%B8%83%E5%88%9D%E4%BD%93%E9%AA%8C/)
 
     
-**总结**
+## 总结
 
 `cli` 制作大致流程就是*准备模板-编写脚本-发布*，具体使用参考[start-react-project](https://github.com/NikFranki/start-react-project)
