feat: update babel post

--- a/_posts/2020-05-03-实现一个babel插件.md
+++ b/_posts/2020-05-03-实现一个babel插件.md
@@ -9,7 +9,7 @@ tags:
     - babel
 ---
 
-进入es6时代，大家都知道有很多浏览器是不支持es6代码的，但是为啥可以打包出来的代码可以跑在浏览器上呢？相信大家有会说用babel-loader转义，把es6代码转化成浏览器认识的es5代码，可是大家都知道babel是如何转化es6代码的，里面发生了什么不可告人的秘密，今天就好好来探讨下。
+进入es6时代，大家都知道有很多浏览器是不支持es6代码的，但是为啥可以打包出来的代码可以跑在浏览器上呢？相信大家有会说用babel-loader转义，把es6代码转化成浏览器认识的es5代码，可是大家都知道babel是如何转化es6代码的吗？里面究竟发生了什么不可告人的秘密，今天就好好探索下。
 
 开宗明义，先来讲下babel的核心原理：
 
