feat: update catalog

--- a/_posts/2018-04-01-我的第一篇博客.md
+++ b/_posts/2018-04-01-我的第一篇博客.md
@@ -5,6 +5,7 @@ subtitle:   ""
 date:       2018-04-01
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - H5
