--- a/_posts/2018-04-03-浅谈ES6.md
+++ b/_posts/2018-04-03-浅谈ES6.md
@@ -5,14 +5,12 @@ subtitle:   ""
 date:       2018-04-03
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - ES6
     - H5
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ![es6](/images/posts/h5/es6.jpg)
 
