--- a/_posts/2018-10-07-npm包制作发布初体验.md
+++ b/_posts/2018-10-07-npm包制作发布初体验.md
@@ -5,13 +5,11 @@ subtitle:   ""
 date:       2018-10-07
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - npm
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 npm包制作及发布小结
 
