--- a/_posts/2018-11-06-设计模式之组合模式.md
+++ b/_posts/2018-11-06-设计模式之组合模式.md
@@ -5,6 +5,7 @@ subtitle:   ""
 date:       2018-11-06
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 设计模式
