--- a/_posts/2019-02-12-js实现常见的数据结构.md
+++ b/_posts/2019-02-12-js实现常见的数据结构.md
@@ -5,14 +5,12 @@ subtitle:   ""
 date:       2019-02-12
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 数据结构
     - JavaScript
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 数据结构对于工作中的作用可大可小，在当前前端的使用场景并没有十分广泛，但是对于一个对于开发者来说，技术不断精进是一个循序渐进的过程，所以很有必要进行学习。
 
