--- a/_posts/2019-05-16-v8引擎运行原理浅析.md
+++ b/_posts/2019-05-16-v8引擎运行原理浅析.md
@@ -5,14 +5,12 @@ subtitle:   ""
 date:       2019-05-16
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 浏览器原理
     - browser
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ## v8引擎
 
