--- a/_posts/2019-05-25-js进阶.md
+++ b/_posts/2019-05-25-js进阶.md
@@ -5,13 +5,11 @@ subtitle:   "js进阶修炼手册"
 date:       2019-05-25
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - JavaScript
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ![js-forward](/images/posts/javascript/js-forward.png)
 
