--- a/_posts/2019-09-09-react cli 制作.md
+++ b/_posts/2019-09-09-react cli 制作.md
@@ -5,13 +5,11 @@ subtitle:   ""
 date:       2019-09-09
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端命令行
     - cli
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ## react cli
 
