--- a/_posts/2019-09-20-彻底搞懂词法分析、语法分析、静态作用域、动态作用域.md
+++ b/_posts/2019-09-20-彻底搞懂词法分析、语法分析、静态作用域、动态作用域.md
@@ -5,13 +5,11 @@ subtitle:   ""
 date:       2019-09-20
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - scope
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ## 一 词法分析
 
