--- a/_posts/2019-10-31-spa路由简易原理.md
+++ b/_posts/2019-10-31-spa路由简易原理.md
@@ -5,13 +5,11 @@ subtitle:   ""
 date:       2019-10-31
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 前端路由
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 spa 路由简易原理及其实现
 
