--- a/_posts/2020-01-01-总结2019展望2020.md
+++ b/_posts/2020-01-01-总结2019展望2020.md
@@ -5,12 +5,10 @@ subtitle:   ""
 date:       2020-01-01
 author:     "franki"
 header-img: "images/posts/life/2019-becoming-2020.jpg"
+catalog: true
 tags:
     - 生活
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ## 总结2019
 
