--- a/_posts/2018-04-02-H5移动端开发问题汇总及解决思路.md
+++ b/_posts/2018-04-02-H5移动端开发问题汇总及解决思路.md
@@ -5,6 +5,7 @@ subtitle:   ""
 date:       2018-04-02
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 移动端H5
