--- a/_posts/2018-11-01-设计模式之策略模式.md
+++ b/_posts/2018-11-01-设计模式之策略模式.md
@@ -5,13 +5,11 @@ subtitle:   ""
 date:       2018-11-01
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 设计模式
 ---
-
-* 目录
-{:toc #markdown-toc}
 
 ![strategy](/images/posts/patterns/strategy.png)
 
