--- a/_posts/2019-06-10-jQuery源码分析之事件-委派.md
+++ b/_posts/2019-06-10-jQuery源码分析之事件-委派.md
@@ -5,6 +5,7 @@ subtitle:   ""
 date:       2019-06-10
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - jQuery
