--- a/_posts/2019-11-13-从0到1实现一个简易版的redux.md
+++ b/_posts/2019-11-13-从0到1实现一个简易版的redux.md
@@ -5,14 +5,12 @@ subtitle:   ""
 date:       2019-11-13
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 源码分析
     - redux
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ![redux flow](/images/posts/redux/redux flow.png)
 
