--- a/_posts/2019-11-26-探析axios源码.md
+++ b/_posts/2019-11-26-探析axios源码.md
@@ -5,14 +5,12 @@ subtitle:   ""
 date:       2019-11-26
 author:     "franki"
 header-img: "images/post-bg-js-module.jpg"
+catalog: true
 tags:
     - 前端开发
     - 源码分析
     - axios
 ---
-
-* 目录  
-{:toc #markdown-toc}
 
 ## axios流程图
 
