--- a/_posts/2020-11-06-leetcode394.md
+++ b/_posts/2020-11-06-leetcode394.md
@@ -7,8 +7,8 @@ author:     "franki"
 header-img: ""
 catalog: true
 tags:
-    - array
-    - stack
+    - Array
+    - Stack
 ---
 
 ## leetcode 394题 字符串解码
