--- a/_posts/2020-11-07-leetcode232.md
+++ b/_posts/2020-11-07-leetcode232.md
@@ -7,9 +7,9 @@ author:     "franki"
 header-img: ""
 catalog: true
 tags:
-    - array
-    - stack
-    - queue
+    - Array
+    - Stack
+    - Queue
 ---
 
 ## leetcode 232题 用栈实现队列
