--- a/_posts/2020-11-02-leetcode66.md
+++ b/_posts/2020-11-02-leetcode66.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      "leetcode 数组 66题"
+title:      "leetcode 66题"
 subtitle:   ""
 date:       2020-11-02
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
+    - leetcode
     - Array
 ---
 
