--- a/_posts/2020-11-03-leetcode268.md
+++ b/_posts/2020-11-03-leetcode268.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      "leetcode 数组 268题"
+title:      "leetcode 268题"
 subtitle:   ""
 date:       2020-11-03
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
+    - leetcode
     - Array
 ---
 
