--- a/_posts/2020-11-04-leetcode821.md
+++ b/_posts/2020-11-04-leetcode821.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      "leetcode 数组 821题"
+title:      "leetcode 821题"
 subtitle:   ""
 date:       2020-11-04
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
+    - leetcode
     - Array
 ---
 
