--- a/_posts/2020-11-05-leetcode1381.md
+++ b/_posts/2020-11-05-leetcode1381.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      "leetcode 数组 1381题"
+title:      "leetcode 1381题"
 subtitle:   ""
 date:       2020-11-05
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
+    - leetcode
     - Array
 ---
 
