--- a/_posts/2020-11-07-leetcode232.md
+++ b/_posts/2020-11-07-leetcode232.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      "leetcode 数组 232题"
+title:      "leetcode 232题"
 subtitle:   ""
 date:       2020-11-07
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
+    - leetcode
     - Array
     - Stack
     - Queue
