--- a/_posts/2020-11-08-leetcode24.md
+++ b/_posts/2020-11-08-leetcode24.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      "leetcode 数组 24题"
+title:      "leetcode 24题"
 subtitle:   ""
 date:       2020-11-08
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
+    - leetcode
     - LinkList
 ---
 
