--- a/_posts/2020-11-06-leetcode394.md
+++ b/_posts/2020-11-06-leetcode394.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      "leetcode 数组 394题"
+title:      "leetcode 394题"
 subtitle:   ""
 date:       2020-11-06
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
+    - leetcode
     - Array
     - Stack
 ---
