add unionFind post

--- a/_posts/2020-12-31-总结2020展望2021.md
+++ b/_posts/2020-12-31-总结2020展望2021.md
@@ -4,7 +4,7 @@ title:      "总结2020展望2021"
 subtitle:   ""
 date:       2020-12-31
 author:     "franki"
-header-img: "images/posts/life/2020-becoming-2021.jpeg"
+header-img: "images/posts/life/2020-becoming-2021.jpg"
 catalog: true
 tags:
     - 生活
