feat: add leetcode 695

--- a/_posts/2021-02-02-leetcode401.md
+++ b/_posts/2021-02-02-leetcode401.md
@@ -7,7 +7,8 @@ author:     "franki"
 header-img: ""
 catalog: true
 tags:
-    - Set
+    - Backtrack
+    - Recursion
 ---
 
 ## leetcode 401题 二进制手表
