--- a/_posts/2021-02-08-leetcode78.md
+++ b/_posts/2021-02-08-leetcode78.md
@@ -21,8 +21,11 @@ tags:
 ```bash
 输入：nums = [1,2,3]
 输出：[[],[1],[2],[1,2],[3],[1,3],[2,3],[1,2,3]]
+```
+
 示例 2：
 
+```bash
 输入：nums = [0]
 输出：[[],[0]]
 ```
