feat: add post 剑指offer-用两个栈实现队列

--- a/_posts/2021-04-22-剑指offer-重建二叉树.md
+++ b/_posts/2021-04-22-剑指offer-重建二叉树.md
@@ -8,7 +8,7 @@ header-img: ""
 catalog: true
 tags:
     - 剑指offer
-    - LinkedList
+    - BinaryTree
 ---
 
 ## 重建二叉树
@@ -27,19 +27,19 @@ tags:
 
 ```js
 var buildTree = function(preorder, inorder) {
-    if (preorder.length === 0 || inorder.length === 0) {
-        return null;
-    }
-    const root = preorder[0];
-    const node = new TreeNode(root);
-    const index = inorder.indexOf(root);
-    const preLeft = preorder.slice(1, index+1);
-    const preRight = preorder.slice(index+1);
-    const inLeft = inorder.slice(0, index);
-    const inRight = inorder.slice(index+1);
-    node.left = buildTree(preLeft, inLeft);
-    node.right = buildTree(preRight, inRight);
-    return node;
+    if (preorder.length === 0 || inorder.length === 0) {
+        return null;
+    }
+    const root = preorder[0];
+    const node = new TreeNode(root);
+    const index = inorder.indexOf(root);
+    const preLeft = preorder.slice(1, index+1);
+    const preRight = preorder.slice(index+1);
+    const inLeft = inorder.slice(0, index);
+    const inRight = inorder.slice(index+1);
+    node.left = buildTree(preLeft, inLeft);
+    node.right = buildTree(preRight, inRight);
+    return node;
 };
 ```
 
