feat: add post 剑指offer-礼物的最大价值

--- a/_posts/2021-05-11-剑指offer-丑数.md
+++ b/_posts/2021-05-11-剑指offer-丑数.md
@@ -97,7 +97,7 @@ class MinHeap {
   }
   shiftDown(index) {
     let leftChildIndex = this.getLeftChildIndex(index);
-    let rightChildIndex = this.getRightChildIndex(index);
+    let rightChildIndex = this.getRightChildIndex(**index**);
     if (!this.heap[leftChildIndex] && !this.heap[rightChildIndex]) return;
     let minIndex = leftChildIndex;
     if (this.heap[rightChildIndex] && this.heap[leftChildIndex] > this.heap[rightChildIndex]) {
