feat: 剑指offer-二叉搜索树的第k大节点

--- a/_posts/2021-05-15-剑指offer-0～n-1中缺失的数字 copy.md
+++ b/_posts/2021-05-15-剑指offer-0～n-1中缺失的数字 copy.md
@@ -2,13 +2,13 @@
 layout:     post
 title:      "剑指offer-0～n-1中缺失的数字"
 subtitle:   ""
-date:       2021-05-12
+date:       2021-05-15
 author:     "franki"
 header-img: ""
 catalog: true
 tags:
     - 剑指offer
-    - LinkedList
+    - Array
 ---
 
 ## 0～n-1中缺失的数字
@@ -21,6 +21,10 @@ tags:
 输入: [0,1,3]
 输出: 2
 ```
+
+### 思路
+
+二分查找，当中间值与中间值在其所在的下标值说明缺失的数字在右边，当中间值与其所在的下标值不等时，继续看mid-1与其下标值是否相等，如果相等说明，mid就是所求，否则缺失的数字在左边
 
 ### 代码
 
