--- a/_posts/2020-11-27-leetcode239.md
+++ b/_posts/2020-11-27-leetcode239.md
@@ -8,7 +8,7 @@ header-img: ""
 catalog: true
 tags:
     - leetcode
-    - Slide Window
+    - Sliding Window Window
 ---
 
 ## leetcode 239题 滑动窗口最大值
