feat: add leetcode 39

--- a/_posts/2020-11-17-leetcode513.md
+++ b/_posts/2020-11-17-leetcode513.md
@@ -9,6 +9,8 @@ catalog: true
 tags:
     - leetcode
     - Binary Tree
+    - Depth-First Search
+    - Breadth-First Search
 ---
 
 ## leetcode 513题 找树左下角的值
