--- a/_posts/2020-11-26-leetcode1052.md
+++ b/_posts/2020-11-26-leetcode1052.md
@@ -8,7 +8,7 @@ header-img: ""
 catalog: true
 tags:
     - leetcode
-    - Sliding Window Window
+    - Sliding Window
 ---
 
 ## leetcode 1052题 爱生气的书店老板
