--- a/_posts/2021-02-02-leetcode401.md
+++ b/_posts/2021-02-02-leetcode401.md
@@ -8,8 +8,9 @@ header-img: ""
 catalog: true
 tags:
     - leetcode
-    - Backtrack
+    - Backtracking
     - Recursion
+    - Depth-First Search
 ---
 
 ## leetcode 401题 二进制手表
