--- a/_posts/2021-03-11-数据结构-图-章节6.md
+++ b/_posts/2021-03-11-数据结构-图-章节6.md
@@ -8,6 +8,8 @@ header-img: ""
 catalog: true
 tags:
     - Graph
+    - Breadth-First Search
+    - Depth-First Search
 ---
 
 章节 6 深度优先搜索（DFS）和广度优先搜索（BFS）
