--- a/_posts/2021-08-20-leetcode70.md
+++ b/_posts/2021-08-20-leetcode70.md
@@ -6,7 +6,8 @@ date:       2021-08-20
 author:     "franki"
 catalog: true
 tags:
-    - 复盘
+    - leetcode
+    - Stack
 ---
 
 ## leetcode 71题  简化路径
