feat: add leetcode 169

--- a/_posts/2021-08-28-leetcode169.md
+++ b/_posts/2021-08-28-leetcode169.md
@@ -7,8 +7,7 @@ author:     "franki"
 catalog: true
 tags:
     - leetcode
-    - BinarySearch
-    - TwoPointers
+    - Map
 ---
 
 ## leetcode 169题 多数元素
