feat: add leetcode 190

--- a/_posts/2021-08-31-leetcode174.md
+++ b/_posts/2021-08-31-leetcode174.md
@@ -2,11 +2,12 @@
 layout:     post
 title:      "leetcode 174题"
 subtitle:   ""
-date:       2021-08-30
+date:       2021-08-31
 author:     "franki"
 catalog: true
 tags:
     - leetcode
+    - Dynamic Programming
 ---
 
 ## leetcode 174题 地下城游戏
