--- a/_posts/2021-09-01-leetcode179.md
+++ b/_posts/2021-09-01-leetcode179.md
@@ -2,11 +2,12 @@
 layout:     post
 title:      "leetcode 179题"
 subtitle:   ""
-date:       2021-08-30
+date:       2021-09-01
 author:     "franki"
 catalog: true
 tags:
     - leetcode
+    - QuickSort
 ---
 
 ## leetcode 179题 最大数
