--- a/_posts/2021-09-19-leetcode222.md
+++ b/_posts/2021-09-19-leetcode222.md
@@ -7,7 +7,8 @@ author:     "franki"
 catalog: true
 tags:
     - leetcode
-    - Barrel Sort
+    - Binary Tree
+    - Breadth-First Search
 ---
 
 ## leetcode 222题 完全二叉树的节点个数
