--- a/_posts/2021-12-31-总结2021展望2022.md
+++ b/_posts/2021-12-31-总结2021展望2022.md
@@ -1,9 +1,10 @@
 ---
 layout:     post
-title:      "2021 年终总结"
+title:      "总结2021展望2022"
 subtitle:   ""
 date:       2021-12-31
 author:     "franki"
+header-img: "images/posts/life/2021-becoming-2022.jpg"
 catalog: true
 tags:
     - 年终总结
