feat: add index min heap

--- a/_posts/2022-10-02-数据结构-图-lazy-prim.md
+++ b/_posts/2022-10-02-数据结构-图-lazy-prim.md
@@ -50,11 +50,9 @@ class LazyPrim {
     if (this.marked[v]) return;
 
     this.marked[v] = true;
-    for (const item of this.g.adj(v)) {
-      if (!this.marked[item.other(v)]) {
-        this.pq.insert(item, (parent, child) => {
-          return parent && child && parent.weight > child.weight;
-        });
+    for (const e of this.g.adj(v)) {
+      if (!this.marked[e.other(v)]) {
+        this.pq.insert(e);
       }
     }
   }
@@ -65,7 +63,7 @@ class LazyPrim {
 
   mstWeight() {
     for (const item of this.mst) {
-      this.weight += item.weight;
+      this.weight += item.wt();
     }
 
     return this.weight;
