--- a/_posts/2022-10-18-leetcode437.md
+++ b/_posts/2022-10-18-leetcode437.md
@@ -10,69 +10,82 @@ tags:
     - leetcode
 ---
 
-## leetcode 437 无重叠区间
+## leetcode 437 路径总和 III
 
-给定一个区间的集合 intervals ，其中 intervals[i] = [starti, endi] 。返回 需要移除区间的最小数量，使剩余区间互不重叠 。
+给定一个二叉树的根节点 root ，和一个整数 targetSum ，求该二叉树里节点值之和等于 targetSum 的 路径 的数目。
+
+路径 不需要从根节点开始，也不需要在叶子节点结束，但是路径方向必须是向下的（只能从父节点到子节点）。
 
 示例1
 
 ```bash
-输入: intervals = [[1,2],[2,3],[3,4],[1,3]]
-输出: 1
-解释: 移除 [1,3] 后，剩下的区间没有重叠。
+输入：root = [10,5,-3,3,2,null,11,3,-2,null,1], targetSum = 8
+输出：3
+解释：和等于 8 的路径有 3 条，如图所示。
 ```
 
 示例2
 
 ```bash
-输入: intervals = [ [1,2], [1,2], [1,2] ]
-输出: 2
-解释: 你需要移除两个 [1,2] 来使剩下的区间没有重叠。
+输入：root = [5,4,8,11,null,13,4,7,2,null,null,5,1], targetSum = 22
+输出：3
 ```
 
-示例3
+提示:
 
-```bash
-输入: intervals = [ [1,2], [2,3] ]
-输出: 0
-解释: 你不需要移除任何区间，因为它们已经是无重叠的了。
-```
+- 二叉树的节点个数的范围是 [0,1000]
+- 109 <= Node.val <= 109
+- 1000 <= targetSum <= 1000
 
 ### 思路
 
-按照区间的结尾进行排序，每次选择最早的，且和前一个区间不重叠的区间。选取末尾最早的，就可以给后面留出更大的控件，共后面的区间选择。这里的做法使用的就是贪心的思想
+有2中情况
+
+1. 如果包含根节点，那么就在它的左子树和右子树仲寻找和为 sum - root.val 的情况
+2. 不包含该 root 节点，那么就需要在它的左子树和右子树仲分别寻找和为 sum 的节点
 
 ### 代码
 
 ```js
 /**
- * @param {number[][]} intervals
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} targetSum
  * @return {number}
  */
-function eraseOverlapIntervals(intervals) {
-    if (intervals.length === 0) {
+
+function pathSum(root, sum) {
+    if (root === null) {
         return 0;
     }
+    let res = findPath(root, sum);
+    res += pathSum(root.left, sum);
+    res += pathSum(root.right, sum);
+    return res;
+}
 
-    intervals.sort((a, b) => a[1] - b[1]);
-
-    let res = 1;
-    let pre = 0;
-
-    for (let i = 1; i < intervals.length; i++) {
-        if (intervals[i][0] >= intervals[pre][1]) {
-            res++;
-            pre = i;
-        } else if (intervals[i][1] < intervals[pre][1]) {
-            pre = i;
-        }
+function findPath(root, sum) {
+    if (root === null) {
+        return 0;
     }
-
-    return intervals.length - res;
+    let res = 0;
+    if (root.val === sum) {
+        res++;
+    }
+    res += findPath(root.left, sum - root.val);
+    res += findPath(root.right, sum - root.val);
+    return res;
 }
 ```
 
 复杂度分析:
 
-- 时间复杂度: O(NlogN)
-- 空间复杂度：O(1)
+- 时间复杂度: O(N^2)
+- 空间复杂度：O(N)
