--- a/_posts/2022-11-03-leetcode503.md
+++ b/_posts/2022-11-03-leetcode503.md
@@ -35,7 +35,13 @@ tags:
 
 ### 思路
 
+思路一:
+
 利用循环数组的思想，首先遍历最外层数组，这个数组代表中，输入的每一个值，第二层循环用来判断下一个值是否比上一个值大，核心地方是 j !== i，这个时候就可以判断是否大于，当 j === i，则退出内层循环，这样做，可以保证，每个元素都最多找外层数组的长度的次数，如果找到比其大的，则放入结果中，如果内层循环走完了，还没找到，那么结果就放入 -1，遍历结束后，res 就是所求。
+
+思路二：
+
+利用栈先进后出的特点，形成一个单调递减栈，栈里面栈的元素始终是逐级递减的，特点是，当遇到下一个元素将要进栈的时候，先判断是否栈顶的元素，如果大于，那么当前栈顶元素被弹出（记得这里是循环，保证前面不存在比其小的元素）；否则，就直接入栈；利用这个特点，我们可以找出下一个更大的元素；（被弹出的元素比其大的元素正是要即将进栈的元素），使用循环进行上述过程，即可得到答案。
 
 ### 代码
 
@@ -66,6 +72,25 @@ function nextGreaterElements(nums) {
         if (!find) {
             res.push(-1);
         }
+    }
+
+    return res;
+}
+
+// 单调栈实现
+function nextGreaterElements(nums) {
+    const length = nums.length;
+    const res = new Array(length).fill(-1);
+    const stack = []; // 存放的是数组元素的下标，方便找到元素
+
+    for (let i = 0; i < 2 * length; i++>) {
+        const num = nums[i % length];
+        while (stack.length && num > nums[stack[stack.length - 1]]) {
+            const topIndex = stack.pop();
+            res[topIndex] = num;
+        }
+
+        stack.push(i % length);
     }
 
     return res;
