feat: update 2022 overall

--- a/_posts/2022-12-31-回顾2022展望2023.md
+++ b/_posts/2022-12-31-回顾2022展望2023.md
@@ -4,7 +4,7 @@ title:      "回顾2022，展望2023"
 date:       2022-12-31
 subtitle:   ""
 author:     "franki"
-header-img: ""
+header-img: "images/posts/life/2022-becoming-2023.png"
 catalog: true
 tags:
     - 生活
