feat: replace img url

--- a/_posts/2023-07-14-计算机网络自顶向下-chapter2.md
+++ b/_posts/2023-07-14-计算机网络自顶向下-chapter2.md
@@ -13,4 +13,4 @@ tags:
 
 ### 计算机网络自顶向下 chapter2
 
-![chapter2](http://qiniu.sevenyuan.cn/chapter2%20%E5%BA%94%E7%94%A8%E5%B1%82.jpg)
+![chapter2](/images/posts/network/chapter2.jpg)
