--- a/_posts/2023-07-15-计算机网络自顶向下-chapter3.md
+++ b/_posts/2023-07-15-计算机网络自顶向下-chapter3.md
@@ -13,4 +13,4 @@ tags:
 
 ### 计算机网络自顶向下 chapter3
 
-![chapter2](http://qiniu.sevenyuan.cn/chapter3%20%E8%BF%90%E8%BE%93%E5%B1%82.jpg)
+![chapter3](/images/posts/network/chapter3.jpg)
