feat: remove python learning chapter18 temporarily

--- a/_posts/2024-06-18-学习svg进阶篇.md
+++ b/_posts/2024-06-18-学习svg进阶篇.md
@@ -102,9 +102,9 @@ stroke-dasharray 将虚线类型应用在描边上
 <rect x="10" height="180" y="10" width="180" style="stroke: black; fill: red;"/>
 ```
 
-或者，可以移入到一个特殊的样式部分，包含在一个叫做 <defs> 的区域
+或者，可以移入到一个特殊的样式部分，包含在一个叫做 `<defs>` 的区域
 
-<defs> 表示定义，可以定义一些不会在 svg 图形中出现，但是可以被其他元素引用的元素
+`<defs>` 表示定义，可以定义一些不会在 svg 图形中出现，但是可以被其他元素引用的元素
 
 ```svg
 <?xml version="1.0" standalone="no"?>
@@ -140,7 +140,7 @@ stroke-dasharray 将虚线类型应用在描边上
 
 #### 线性渐变
 
-在 defs 元素内部定义一个 <linearGradient> 元素
+在 defs 元素内部定义一个 `<linearGradient>` 元素
 
 ```svg
 <svg width="120" height="240" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -179,7 +179,7 @@ stroke-dasharray 将虚线类型应用在描边上
 
 ![alt text](/images/posts/svg/linear-gradient.png)
 
-线性渐变内部有几个 <stop> 结点，这些结点通过指定位置的 offset 属性和 stop-color 属性来说明渐变在特定位置上应该是什么颜色；offset 偏移量始终应该以 0 （0%） 开始 到 1 （100%）结束，stop-opacity 可以设置某个位置的透明度
+线性渐变内部有几个 `<stop>` 结点，这些结点通过指定位置的 offset 属性和 stop-color 属性来说明渐变在特定位置上应该是什么颜色；offset 偏移量始终应该以 0 （0%） 开始 到 1 （100%）结束，stop-opacity 可以设置某个位置的透明度
 
 使用渐变，可以在一个对象属性的 fill 或者属性 stroke 中引用它，与 css 使用 url 应用元素的方法一致
 
@@ -197,7 +197,7 @@ fill: url(#gradient1);
 
 #### 径向渐变
 
-使用 <radioGradient> 元素来创建径向渐变
+使用 `<radioGradient>` 元素来创建径向渐变
 
 ```svg
 <?xml version="1.0" standalone="no"?>
@@ -259,7 +259,7 @@ spreadMethod 属性，控制当渐变到达终点的行为
 
 图案，功能非常强大，作用是 svg 填充
 
-<patterns> 同样要放到 defs 内部
+`<patterns>` 同样要放到 defs 内部
 
 ```svg
 <?xml version="1.0" standalone="no"?>
